sonarqube - fixed code issues