@@ -1,23 +1,21 @@
 package com.pokedex.userservice.service;
 
-import com.pokedex.userservice.config.JwtTokenProvider;
 import com.pokedex.userservice.dto.UserCreateRequestDto;
 import com.pokedex.userservice.dto.UserDetailDto;
 import com.pokedex.userservice.dto.UserListDto;
 import com.pokedex.userservice.dto.UserUpdateRequestDto;
 import com.pokedex.userservice.entity.PokemonId;
 import com.pokedex.userservice.entity.User;
+import com.pokedex.userservice.exception.PokedexUserException;
 import com.pokedex.userservice.feign.AuthFeignClient;
 import com.pokedex.userservice.feign.PokemonFeignClient;
 import com.pokedex.userservice.repository.PokemonIdRepository;
 import com.pokedex.userservice.repository.UserRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.*;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -39,10 +37,10 @@ public class UserService {
 
     public UserDetailDto createUser(UserCreateRequestDto dto, String token) {
         if (userRepository.existsByUsername(dto.getUsername())) {
-            throw new RuntimeException("This username already exists! Try another one");
+            throw new PokedexUserException("This username already exists! Try another one");
         }
         if (userRepository.existsByEmail(dto.getEmail())) {
-            throw new RuntimeException("This email already exists! Try another one");
+            throw new PokedexUserException("This email already exists! Try another one");
         }
         User user = modelMapper.map(dto, User.class);
         user.setIsActive(true);
@@ -57,23 +55,21 @@ public class UserService {
 
     public UserDetailDto updateUser(Long id, UserUpdateRequestDto dto) {
 
-        User user = userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found with id :" + id));
+        User user = userRepository.findById(id).orElseThrow(() -> new PokedexUserException("User not found with id :" + id));
         modelMapper.map(dto, user);
         userRepository.save(user);
-        UserDetailDto responseDto = modelMapper.map(user, UserDetailDto.class);
-        return responseDto;
+        return modelMapper.map(user, UserDetailDto.class);
     }
 
 
     public UserDetailDto getUserById(Long id) {
-        User user = userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found with id :" + id));
-        UserDetailDto dto = modelMapper.map(user, UserDetailDto.class);
-        return dto;
+        User user = userRepository.findById(id).orElseThrow(() -> new PokedexUserException("User not found with id :" + id));
+        return modelMapper.map(user, UserDetailDto.class);
     }
 
 
     public void deleteUser(Long id, String token) {
-        User user = userRepository.findById(id).orElseThrow(()->new RuntimeException("User not found with id"+id));
+        User user = userRepository.findById(id).orElseThrow(()->new PokedexUserException("User not found with id"+id));
         for(PokemonId pokemonId: user.getCatchListIds()){
             pokemonId.getCatchLists().remove(pokemonId);
         }
@@ -87,13 +83,12 @@ public class UserService {
 
     public List<UserListDto> findAll() {
         List<User> users = userRepository.findAll();
-        List<UserListDto> userListDtos = users.stream().map(u -> modelMapper.map(u, UserListDto.class)).collect(Collectors.toList());
-        return userListDtos;
+        return users.stream().map(u -> modelMapper.map(u, UserListDto.class)).toList();
     }
 
     public Page<UserListDto> findAll(Pageable pageable) {
         Page<User> users = userRepository.findAll(pageable);
-        List<UserListDto> userListDtos = users.stream().map(u -> modelMapper.map(u, UserListDto.class)).collect(Collectors.toList());
+        List<UserListDto> userListDtos = users.stream().map(u -> modelMapper.map(u, UserListDto.class)).toList();
         return new PageImpl<>(userListDtos, pageable, users.getTotalElements());
     }
 
@@ -104,20 +99,18 @@ public class UserService {
         ExampleMatcher matcher = ExampleMatcher.matchingAll().withIgnoreCase().withIgnorePaths("isActive").withIgnoreNullValues().withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING);
         Example<User> example = Example.of(exampleUser, matcher);
         Page<User> users = userRepository.findAll(example, pageable);
-        List<UserListDto> userListDtos = users.stream().map(u -> modelMapper.map(u, UserListDto.class)).collect(Collectors.toList());
+        List<UserListDto> userListDtos = users.stream().map(u -> modelMapper.map(u, UserListDto.class)).toList();
         return new PageImpl<>(userListDtos, pageable, users.getTotalElements());
     }
 
     public List<UserListDto> getUsersWhoCatched(Long pokemonId){
-        PokemonId pokemon = pokemonIdRepository.findById(pokemonId).orElseThrow(() -> new RuntimeException("Pokemon not found with id : " + pokemonId));
-        List<UserListDto> dtos = pokemon.getCatchLists().stream().map(u -> modelMapper.map(u, UserListDto.class)).collect(Collectors.toList());
-        return dtos;
+        PokemonId pokemon = pokemonIdRepository.findById(pokemonId).orElseThrow(() -> new PokedexUserException("Pokemon not found with id : " + pokemonId));
+        return pokemon.getCatchLists().stream().map(u -> modelMapper.map(u, UserListDto.class)).toList();
     }
 
     public List<UserListDto> getUsersWhoWished(Long pokemonId){
-        PokemonId pokemon = pokemonIdRepository.findById(pokemonId).orElseThrow(() -> new RuntimeException("Pokemon not found with id : " + pokemonId));
-        List<UserListDto> dtos = pokemon.getWishLists().stream().map(u -> modelMapper.map(u, UserListDto.class)).collect(Collectors.toList());
-        return dtos;
+        PokemonId pokemon = pokemonIdRepository.findById(pokemonId).orElseThrow(() -> new PokedexUserException("Pokemon not found with id : " + pokemonId));
+        return pokemon.getWishLists().stream().map(u -> modelMapper.map(u, UserListDto.class)).toList();
     }
 
 }
